--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-streamlit==1.29.0
+# FastAPI and server
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+
+# Data processing
 pandas==2.1.4
 numpy==1.26.2
+
+# HTTP requests
 requests==2.31.0
-plotly==5.18.0
+
+# Date/time handling
 python-dateutil==2.8.2
 pytz==2023.3
+
+# Machine Learning
+scikit-learn==1.3.2
+
+# Optional: AI recommendations (comment out if not using)
 openai>=1.0.0
