--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 
-# Data processing
-pandas==2.1.4
-numpy==1.26.2
+# Data processing (Python 3.11 compatible versions)
+pandas>=2.2.0
+numpy>=1.26.0
 
 # HTTP requests
 requests==2.31.0
@@ -14,7 +14,7 @@ python-dateutil==2.8.2
 pytz==2023.3
 
 # Machine Learning
-scikit-learn==1.3.2
+scikit-learn>=1.3.2
 
 # Optional: AI recommendations (comment out if not using)
 openai>=1.0.0
