--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ requests==2.31.0
 python-dateutil==2.8.2
 pytz==2023.3
 
+# Environment variables
+python-dotenv==1.0.0
+
 # Machine Learning
 scikit-learn>=1.3.2
 
